fixed issue with overflowing pages

--- a/components/assets/styles/components/_background.scss
+++ b/components/assets/styles/components/_background.scss
@@ -39,36 +39,36 @@
   }
 }
 
-.bg-empty {
-  background-image: url($empty);
-  background-position: bottom;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+// .bg-empty {
+//   background-image: url($empty);
+//   background-position: bottom;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+// }
 
-.box-full-main {
-  position: absolute;
-  top: 5.125rem;
-  right: 1rem;
-  left: 1rem;
-  bottom: 1rem;
-}
+// .box-full-main {
+//   position: absolute;
+//   top: 5.125rem;
+//   right: 1rem;
+//   left: 1rem;
+//   bottom: 1rem;
+// }
 
-.bg-billing-card {
-  min-width: 100%;
-  background-image: $billing-card-border-gradient;
-  padding: 1px;
-  & > div {
-    background: $billing-card-bg-gradient;
-  }
-  & .card-number {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-}
+// .bg-billing-card {
+//   min-width: 100%;
+//   background-image: $billing-card-border-gradient;
+//   padding: 1px;
+//   & > div {
+//     background: $billing-card-bg-gradient;
+//   }
+//   & .card-number {
+//     font-family: Arial, Helvetica, sans-serif;
+//   }
+// }
 
-.bg-main {
-  background-image: $image-overlay-medium, url($main-bg);
-}
+// .bg-main {
+//   background-image: $image-overlay-medium, url($main-bg);
+// }
 
 .bg-backdrop-blur-effect {
   z-index: 50;
